# camhd-motion-analysis

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  CAMHDA301-20160101T000000Z.json  CAMHDA301-20160101T000000Z_partial.json  CMakeLists.txt  Gemfile  LICENSE  README.md  Rakefile  conanfile.py  docker-compose.yml  fips.yml  launch_worker.sh  test.sh
analysis/: Frame Stats in Dask.ipynb  Identify Regions.ipynb  Movie Subtitler.ipynb  Regions Analysis.ipynb  Similarity Analysis.ipynb  Static Section Extractor.ipynb  paths.py
cmake/: BuildLibVideoTools.cmake
cpp/: .gitignore  CMakeLists.txt  fips
cpp/analysis/: Frame Stats in Dask.ipynb  Generate Regions.ipynb  Movie Subtitler.ipynb  Static Section Extractor.ipynb
cpp/cmake/: FindCURLpp.cmake
cpp/lib/: camhd_client.cpp  camhd_client.h  camhd_movie.cpp  foo.cpp  http_request.cpp  json_contents.cpp  json_converters.h  regions.cpp  timer.h
cpp/lib/movie_workers/: approx_derivative.h  factory.h  frame_statistics.h  gpu_optical_flow.cpp  optical_flow.cpp  optical_flow.h
cpp/test/unit/: CMakeLists.txt  test_camhd_client.cpp  test_camhd_movie.cpp  test_data.h  test_interval.cpp
cpp/tools/: OpticalFlow.cpp  common_init.h  frame_stats.cpp
cpp/tools/MotionTrack/: config.h  csv_writer.h
cpp/tools/deprecated/: motion_track.cpp  stitch.cpp
deploy/: .dockerignore  .gitignore  Dockerfile_base  Dockerfile_prod  Dockerfile_test  README.md  Rakefile  launch_worker.sh
deploy/analysis/: CPU Performance Analysis.ipynb  Frame stats time analysis.ipynb
deploy/cache_on_digitalocean/: README.md
deploy/cache_on_digitalocean/gcloud/: swarm-manager-startup-script.sh  swarm-worker-cloud-init
deploy/cache_on_digitalocean/gcloud/gce_standalone/: Rakefile  cloud-init  config_default.yml  config_example.yml
deploy/cache_on_digitalocean/gcloud/google_app_engine/: README.md  Rakefile
deploy/cache_on_digitalocean/gcloud/google_app_engine/cache/: app.yaml
deploy/cache_on_digitalocean/gcloud/google_app_engine/forwarder/: dispatch.yaml  redirector.py  redirector.yaml
deploy/cache_on_digitalocean/gcloud/google_app_engine/nocache/: Dockerfile  app.yaml
deploy/docker/: Dockerfile_base  Dockerfile_prod  Dockerfile_test
deploy/gcloud/: Notes.md  Rakefile  gcloud_do_inject.sh  swarm-worker-cloud-init
deploy/rancher/: Rakefile  docker-compose.yml  rancher-compose.yml
docker/deploy/: Dockerfile
docker/rq_worker/: Dockerfile  Dockerfile_base  Dockerfile_pristine  Dockerfile_test
docker/test/: Dockerfile
include/: camhd_client.h  camhd_movie.h  client.h  http_request.h  interval.h  interval.inl  movie_workers.h
incude/: KeyFrame.h
lib/: CMakeLists.txt  Frame.h  VideoIterator.h  camhd_client.cpp  camhd_movie.cpp  camhd_movie.h  client.cpp  http_request.cpp  json_contents.h  json_converters.h  kbhit.h  movie_workers.h  regions.cpp  regions.h  similarity.cpp  similarity.h  stitcher.h
lib/movie_workers/: approx_derivative.h  factory.h  frame_mean.h  frame_processor.h  frame_statistics.h  gpu_optical_flow.cpp  gpu_optical_flow.h  optical_flow.cpp  optical_flow.h  timer.h
python/: .gitignore  Makefile  extract_averages.py  extract_static_thumbnails.py  frame_stats.py  process_file.py  pytest.ini  recent_injector.py  region_analysis.py  region_analysis_deprecated.py  rq_client.py  rq_job_injector.py  rq_server.py  rq_worker.py  setup.py
python/apps/: job_injector.py  recent_injector.py
python/camhd_motion_analysis/: __init__.py  celery.py  find_regions.py  frame_stats.py  identify_regions.py  process_file.py  region_analysis.py
python/test/: test_frame_stats.py  test_process_file.py
python/tests/: check_json_file.py  docker-compose.yml  test_frame_stats.py  test_process_file.py  test_process_file_minio.py
swarm/: Notes.md  Rakefile  worker-cloud-init
tasks/: docker.rb
test/unit/: CMakeLists.txt  test_camhd_client.cpp  test_camhd_movie.cpp  test_data.h  test_http_request.cpp  test_interval.cpp  test_test.cpp
tools/: CMakeLists.txt  MotionTrack.cpp  MotionTrackGpu.cpp  Sequence.cpp  TimeLapse.cpp  annotate.cpp  common_init.h  frame_stats.cpp  motion_track.cpp  stitch.cpp
tools/MotionTrack/: MotionTracking.h  csv_writer.h
